<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card1"
        app:cardCornerRadius="5sp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/line1"
                    android:text="@string/amount"
                    android:textColor="@color/green"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="14dp"

                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorAccent"
                    android:gravity="right"
                    android:hint="45,000"
                    android:layout_below="@+id/line1"
                    android:id="@+id/amount"
                    />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/line2"
                android:layout_below="@id/amount"
                android:text="@string/commission"
                android:textColor="@color/green"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/colorAccent"
                android:id="@+id/commission"
                android:inputType="numberDecimal"
                android:layout_below="@id/line2"
                android:hint="25"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/line3"
                android:layout_below="@id/commission"
                android:text="@string/service"
                android:textColor="@color/green"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:focusedByDefault="true"
                android:layout_below="@+id/line3"
                android:spinnerMode="dialog"
                android:id="@+id/service">
            </Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/line4"
                android:layout_below="@id/service"
                android:text="@string/bank"
                android:textColor="@color/green"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:focusedByDefault="true"
                android:layout_below="@+id/line4"
                android:spinnerMode="dialog"
                android:id="@+id/bank">
            </Spinner>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/card1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel"
            android:padding="10dp"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:id="@+id/depositlayout">
            <Button
                android:layout_width="125sp"
                android:id="@+id/deposit_button"
                android:layout_height="wrap_content"
                android:background="@color/teal"
                android:text="@string/deposit"
                android:textColor="@color/white"
                android:textSize="20dp"
                />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                >
            <Button
                android:layout_width="125sp"
                android:layout_height="wrap_content"
                android:id="@+id/withdraw_button"
                android:background="@color/red"
                android:text="@string/withdrawal"
                android:textColor="@color/white"
                android:textSize="20dp"
                />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>