<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative_layout"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel_layout"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/line1"
                android:text="@string/bank"
                android:textColor="@color/green"
                android:fontFamily="sans-serif-condensed"
                android:textSize="14dp"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textColor="@color/colorAccent"
                android:gravity="right"
                android:hint="Vishnu Bank"
                android:layout_below="@+id/line1"
                android:id="@+id/bank_name"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/line2"
                android:layout_below="@id/bank_name"
                android:text="@string/service"
                android:textColor="@color/green"
                android:fontFamily="sans-serif-condensed"
                android:textSize="14dp"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textColor="@color/colorAccent"
                android:paddingBottom="10dp"
                android:gravity="right"
                android:hint="Mee Seva"
                android:layout_below="@+id/line2"
                android:id="@+id/service_name"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/service_name"
                android:textColor="@color/white"
                android:background="@color/teal"
                android:text="@string/submit"
                android:id="@+id/bank_button"
                />
        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>